TS-867 moving to a different thread only if the pluginvc is invoked from a non regular thread

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1159376 13f79535-47bb-0310-9956-ffa450edef68